# Agent-Analytics

./: DEPLOY_COOLIFY.md  docker-compose.coolify.yml  docker-compose.yaml  pnpm-lock.yaml
.github/workflows/: _deploy_ecs_service.yml  build-images.yml  claude-code-security-review.yml  codeql.yml  codespell.yml  deploy.yml  licencecheck.yml  pipeline.yml  promote-main-to-production.yml  release.yml  sdk-api-spec.yml  semgrep.yml  snyk-web.yml  snyk-worker.yml  storybook-preview.yml  zizmor.yml
fern/apis/organizations/definition/: api.yml
fern/apis/server/definition/: api.yml  blob-storage-integrations.yml  comments.yml  commons.yml  health.yml  ingestion.yml  llm-connections.yml  media.yml  metrics.yml  models.yml  opentelemetry.yml  projects.yml  prompt-version.yml  score-configs.yml  scores.yml  trace.yml
sdks/: README.md
sdks/activetrace-js/: package.json
sdks/activetrace-js/src/: index.ts
sdks/activetrace-python/: README.md  pyproject.toml
sdks/activetrace-python/activetrace/: __init__.py
web/: package.json
web/src/: env.mjs
web/src/__tests__/server/: admin-api-key-auth.servertest.ts  in-app-agent-stream.servertest.ts  organizations-api.servertest.ts  (+2 more)
web/src/components/: ActionButton.tsx  LangfuseLogo.tsx  VersionLabel.tsx
web/src/pages/: onboarding.tsx
web/src/utils/: api.ts  hidden-links.ts
worker/: package.json
worker/src/: app.ts
worker/src/__tests__/: mixpanelIntegrationProjectJob.test.ts  mixpanelTransformers.test.ts  posthogTransformers.test.ts  webhook-redirect-headers.test.ts  webhooks.test.ts
worker/src/queues/: webhooks.ts
(+192 files in other folders)
